# OpenGL-GLFW-GLAD-CMAKE-FRAME

./: CMakeLists.txt  README.md
include/GL/: gl3w.h
include/glad/: glad.h
include/useful/: Mesh.hpp  Model.hpp  ShaderProcess.hpp  TextureProcess.hpp  camera.hpp
src/: Source.cpp
tools/: glad.c  stb_imge.cpp
